new zvtm-core picking API
git-svn-id: file:///home/hoijui/src/IsaViz/tmp2/zvtm.svn/code@5423 74e165f3-c697-40a6-91af-552c8936d7fe